--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #spring.datasource.url=mysql://b067401cf5ec73:ba7d3d21@eu-cdbr-west-01.cleardb.com/heroku_e516bc03f8eea12?reconnect=true
-spring.datasource.url=u-cdbr-west-01.cleardb.com
+spring.datasource.url=eu-cdbr-west-01.cleardb.com
 
 spring.datasource.username=b067401cf5ec73
 spring.datasource.password=ba7d3d21
