--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=mysql://b067401cf5ec73:ba7d3d21@eu-cdbr-west-01.cleardb.com/heroku_e516bc03f8eea12?reconnect=true
-spring.datasource.username=b067401cf5ec73
-spring.datasource.password=ba7d3d21
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=mysql://b067401cf5ec73:ba7d3d21@eu-cdbr-west-01.cleardb.com/heroku_e516bc03f8eea12?reconnect=true
+#spring.datasource.username=b067401cf5ec73
+#spring.datasource.password=ba7d3d21
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.maxActive=10
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
 
