--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
             <artifactId>bootstrap</artifactId>
             <version>5.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
 
     </dependencies>
 
